@startuml

title __A6PAN's Class Diagram__\n

  namespace cn.cdut.a6pan {
    class cn.cdut.a6pan.LoginActivity {
        {static} ~ TAG : String
        ~ controller : NavController
        - mExit : boolean
        + onBackPressed()
        # onCreate()
    }
  }
  

  namespace cn.cdut.a6pan {
    class cn.cdut.a6pan.MainActivity {
        {static} - TAG : String
        - mExit : Boolean
        - title : TextView
        + onBackPressed()
        # onCreate()
        # onStart()
        - requestPermission()
    }
  }
  

  cn.cdut.a6pan.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  cn.cdut.a6pan.LoginActivity o-- cn.cdut.a6pan.databinding.LoginActivityBinding : binding
  cn.cdut.a6pan.LoginActivity o-- cn.cdut.a6pan.ui.login.LoginViewModel : mViewModel
  cn.cdut.a6pan.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  cn.cdut.a6pan.MainActivity o-- cn.cdut.a6pan.databinding.MainActivityBinding : binding
  cn.cdut.a6pan.MainActivity o-- cn.cdut.a6pan.ui.main.viewmodel.FileViewModel : fileViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
